# kactivitymanagerd

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  .vim-template:cpp  .vim-template:h  CMakeLists.txt  kactivitymanagerd.categories
autotests/: CMakeLists.txt
autotests/integration/: CMakeLists.txt  test_activities_dbus.cpp  testhelper.cpp  testhelper.h
cmake/modules/: c++-test-override-attr-none-fail.cpp  c++11-test-auto-N2546.cpp  c++11-test-initializer-lists-N2672.cpp  c++11-test-lambda-N2927.cpp  c++11-test-nullptr-N2431-fail.cpp  c++11-test-nullptr-N2431.cpp  c++11-test-override-N3206-fail.cpp  c++11-test-override-N3206.cpp  c++11-test-unique_ptr-none.cpp  c++11-test-variadic-templates-N2242.cpp
po/ar/: kactivities5.po  kactivities6.po
po/ast/: kactivities5.po  kactivities6.po
po/az/: kactivities5.po  kactivities6.po
po/bg/: kactivities5.po  kactivities6.po
po/bs/: kactivities5.po  kactivities6.po
po/ca/: kactivities5.po  kactivities6.po
po/ca@valencia/: kactivities5.po  kactivities6.po
po/cs/: kactivities5.po  kactivities6.po
po/da/: kactivities5.po  kactivities6.po
po/de/: kactivities5.po  kactivities6.po
po/el/: kactivities5.po  kactivities6.po
po/en_GB/: kactivities5.po  kactivities6.po
po/eo/: kactivities5.po  kactivities6.po
po/es/: kactivities5.po  kactivities6.po
po/et/: kactivities5.po  kactivities6.po
po/eu/: kactivities5.po  kactivities6.po
po/fi/: kactivities5.po  kactivities6.po
po/fr/: kactivities5.po  kactivities6.po
po/ga/: kactivities5.po  kactivities6.po
po/gd/: kactivities5.po  kactivities6.po
po/gl/: kactivities5.po  kactivities6.po
po/gu/: kactivities5.po  kactivities6.po
po/he/: kactivities5.po  kactivities6.po
po/hi/: kactivities5.po  kactivities6.po
po/hr/: kactivities5.po  kactivities6.po
po/hu/: kactivities5.po  kactivities6.po
po/ia/: kactivities5.po  kactivities6.po
po/id/: kactivities5.po  kactivities6.po
po/is/: kactivities5.po  kactivities6.po
po/it/: kactivities5.po  kactivities6.po
po/ja/: kactivities5.po  kactivities6.po
po/ka/: kactivities5.po  kactivities6.po
po/kk/: kactivities5.po  kactivities6.po
po/km/: kactivities5.po  kactivities6.po
po/kn/: kactivities5.po  kactivities6.po
po/ko/: kactivities5.po  kactivities6.po
po/lt/: kactivities5.po  kactivities6.po
po/lv/: kactivities5.po  kactivities6.po
po/ml/: kactivities5.po  kactivities6.po
po/mr/: kactivities5.po  kactivities6.po
src/: CMakeLists.txt  Messages.sh  kactivities-features.h.cmake  kactivitymanagerd.service.in  org.kde.activitymanager.service.in  plasma-kactivitymanagerd.service.in
src/common/: specialvalues.h
src/common/database/: Database.cpp  Database.h
src/common/database/schema/: ResourcesDatabaseSchema.cpp  ResourcesDatabaseSchema.h
src/common/dbus/: common.h  org.kde.ActivityManager.Activities.cpp  org.kde.ActivityManager.Activities.h  org.kde.ActivityManager.Activities.xml
src/service/: Activities.cpp  Activities.h  Activities_p.h  Application.cpp  Application.h  CMakeLists.txt  Config.cpp  Config.h  Debug.cpp  Debug.h  Event.cpp  Event.h  Features.cpp  Features.h  Module.cpp  Module.h  Plugin.cpp  Plugin.h  Resources.cpp  Resources.h  Resources_p.h  Version.h
src/service/files/: kactivitymanagerd-plugin.desktop  kactivitymanagerd.desktop
src/service/ksmserver/: KSMServer.cpp  KSMServer.h  KSMServer_p.h
src/service/plugins/: CMakeLists.txt
src/service/plugins/activitytemplates/: CMakeLists.txt  TemplatesPlugin.cpp  TemplatesPlugin.h  kactivitymanagerd-plugin-activitytemplates.json
src/service/plugins/eventspy/: CMakeLists.txt  EventSpy.cpp  EventSpy.h  kactivitymanagerd-plugin-eventspy.json
src/service/plugins/globalshortcuts/: CMakeLists.txt  GlobalShortcutsPlugin.cpp  GlobalShortcutsPlugin.h  kactivitymanagerd-plugin-globalshortcuts.json
src/service/plugins/gtk-eventspy/: CMakeLists.txt  GtkEventSpy.cpp  GtkEventSpy.h  kactivitymanagerd-plugin-gtk-eventspy.json
src/service/plugins/krunner/: ActivityRunner.cpp  ActivityRunner.h  CMakeLists.txt  dbusutils.h  kactivitymanagerd-plugin-activityrunner.json  org.kde.krunner1.xml  plasma-runnners-activities.desktop
src/service/plugins/libreoffice-spy/: LibreOfficeEventSpy.cpp  LibreOfficeEventSpy.h
src/service/plugins/recentlyused-eventspy/: CMakeLists.txt  RecentlyUsedEventSpy.cpp  RecentlyUsedEventSpy.h  kactivitymanagerd-plugin-recentlyused-eventspy.json
src/service/plugins/runapplication/: CMakeLists.txt  RunApplicationPlugin.cpp  RunApplicationPlugin.h  kactivitymanagerd-plugin-runapplication.json
src/service/plugins/slc/: CMakeLists.txt  SlcPlugin.cpp  SlcPlugin.h  kactivitymanagerd-plugin-slc.json
src/service/plugins/sqlite/: CMakeLists.txt  Database.cpp  Database.h  ResourceLinking.cpp  ResourceLinking.h  ResourceScoreCache.cpp  ResourceScoreCache.h  ResourceScoreMaintainer.cpp  ResourceScoreMaintainer.h  StatsPlugin.cpp  StatsPlugin.h  Utils.h  kactivitymanagerd-plugin-sqlite.json
src/service/plugins/virtualdesktopswitch/: CMakeLists.txt  VirtualDesktopSwitchPlugin.cpp  VirtualDesktopSwitchPlugin.h  kactivitymanagerd-plugin-virtualdesktopswitch.json
src/utils/: continue_with.h  d_ptr.h  d_ptr_implementation.h  dbusfuture_p.cpp  dbusfuture_p.h  debug_and_return.h  for_each_assoc.h  lazy_val.h  member_matcher.h  merge_into.h  optional_view.h  ptr_to.h  qsqlquery_iterator.cpp  qsqlquery_iterator.h  range.h  remove_if.h  slide.h
src/workspace/: CMakeLists.txt
src/workspace/fileitemplugin/: CMakeLists.txt  FileItemLinkingPlugin.cpp  FileItemLinkingPluginActionLoader.cpp  FileItemLinkingPluginActionLoader.h  FileItemLinkingPlugin_p.h
src/workspace/imports/: CMakeLists.txt  activitiesextensionplugin.cpp  activitiesextensionplugin.h  activityinfo.cpp  activityinfo.h  activitymodel.cpp  activitymodel.h  resourceinstance.cpp  resourceinstance.h  resourcemodel.cpp  resourcemodel.h  utils_p.h
src/workspace/kio/: CMakeLists.txt  KioActivities.cpp
src/workspace/settings/: ActivitiesTab.cpp  CMakeLists.txt  PrivacyTab.cpp
src/workspace/settings/imports/: activitysettings.cpp  dialog.cpp
(+59 files in other folders)
